--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,6 +11,7 @@ permissions:
 jobs:
   build-macos:
     runs-on: macos-latest
+    environment: Prod
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -33,6 +34,44 @@ jobs:
       - name: Build .app bundle
         run: pyinstaller invoice_generator.spec --noconfirm --clean
 
+      - name: Import code signing certificate
+        env:
+          CERTIFICATE_BASE64: ${{ secrets.APPLE_CERTIFICATE_BASE64 }}
+          CERTIFICATE_PASSWORD: ${{ secrets.APPLE_CERTIFICATE_PASSWORD }}
+        run: |
+          CERT_FILE=$(mktemp).p12
+          echo "$CERTIFICATE_BASE64" | base64 --decode > "$CERT_FILE"
+          KEYCHAIN_PATH=$RUNNER_TEMP/app-signing.keychain-db
+          KEYCHAIN_PASSWORD=$(openssl rand -base64 32)
+          security create-keychain -p "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
+          security set-keychain-settings -lut 21600 "$KEYCHAIN_PATH"
+          security unlock-keychain -p "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
+          security import "$CERT_FILE" -P "$CERTIFICATE_PASSWORD" \
+            -A -t cert -f pkcs12 -k "$KEYCHAIN_PATH"
+          security set-key-partition-list -S apple-tool:,apple: \
+            -k "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
+          security list-keychain -d user -s "$KEYCHAIN_PATH"
+          rm "$CERT_FILE"
+          echo "KEYCHAIN_PATH=$KEYCHAIN_PATH" >> $GITHUB_ENV
+          echo "KEYCHAIN_PASSWORD=$KEYCHAIN_PASSWORD" >> $GITHUB_ENV
+
+      - name: Find signing identity
+        run: |
+          KEYCHAIN_PATH=${{ env.KEYCHAIN_PATH }}
+          SIGNING_IDENTITY=$(security find-identity -v -p codesigning "$KEYCHAIN_PATH" | grep "Developer ID Application" | head -1 | sed -E 's/.*"([^"]+)".*/\1/')
+          if [ -z "$SIGNING_IDENTITY" ]; then
+            echo "Error: Could not find Developer ID Application certificate" >&2
+            exit 1
+          fi
+          echo "Found signing identity: $SIGNING_IDENTITY"
+          echo "SIGNING_IDENTITY=$SIGNING_IDENTITY" >> $GITHUB_ENV
+
+      - name: Sign .app bundle
+        env:
+          SIGNING_IDENTITY: ${{ env.SIGNING_IDENTITY }}
+        run: |
+          ./scripts/sign_app.sh "dist/Invoice Generator.app" "$SIGNING_IDENTITY"
+
       - name: Create .dmg
         run: |
           mkdir -p dist/dmg
@@ -45,8 +84,35 @@ jobs:
             -format UDZO \
             "dist/InvoiceGenerator-${{ github.ref_name }}.dmg"
 
+      - name: Sign .dmg
+        env:
+          SIGNING_IDENTITY: ${{ env.SIGNING_IDENTITY }}
+        run: |
+          codesign --force --sign "$SIGNING_IDENTITY" "dist/InvoiceGenerator-${{ github.ref_name }}.dmg"
+
+      - name: Notarize .dmg
+        env:
+          APPLE_ID: ${{ secrets.APPLE_ID }}
+          APPLE_APP_PASSWORD: ${{ secrets.APPLE_APP_PASSWORD }}
+          APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
+        run: |
+          xcrun notarytool submit "dist/InvoiceGenerator-${{ github.ref_name }}.dmg" \
+            --apple-id "$APPLE_ID" \
+            --password "$APPLE_APP_PASSWORD" \
+            --team-id "$APPLE_TEAM_ID" \
+            --wait
+
+      - name: Staple notarization ticket
+        run: |
+          xcrun stapler staple "dist/InvoiceGenerator-${{ github.ref_name }}.dmg"
+
       - name: Upload .dmg to Release
         uses: softprops/action-gh-release@v2
         with:
           files: dist/InvoiceGenerator-*.dmg
           generate_release_notes: true
+
+      - name: Cleanup keychain
+        if: always()
+        run: |
+          security delete-keychain ${{ env.KEYCHAIN_PATH }} || true
